@@ -7,4 +7,8 @@ package TestCase::Minimal {
     
     return new TestCase::Minimal;
   }
+
+  sub set_x : int ($self, $x : int) {
+    $self->{x} = $x;
+  }
 }
