@@ -43,59 +43,59 @@ package TestCase {
   static sub FLOAT_PRECICE : float () { return 16384.5f; }
   static sub DOUBLE_PRECICE : double () { return 65536.5; }
   
-  sub set_x_int_array : void ($self : TestCase, $x_int_array : int[]) {
+  sub set_x_int_array : void ($self, $x_int_array : int[]) {
     $self->{x_int_array} = $x_int_array;
   }
 
-  sub set_x_string : void ($self : TestCase, $x_string : byte[]) {
+  sub set_x_string : void ($self, $x_string : byte[]) {
     $self->{x_string} = $x_string;
   }
 
-  sub set_x_byte : void ($self : TestCase, $x_byte : byte) {
+  sub set_x_byte : void ($self, $x_byte : byte) {
     $self->{x_byte} = $x_byte;
   }
 
-  sub set_x_short : void ($self : TestCase, $x_short : short) {
+  sub set_x_short : void ($self, $x_short : short) {
     $self->{x_short} = $x_short;
   }
 
-  sub set_x_int : void ($self : TestCase, $x_int : int) {
+  sub set_x_int : void ($self, $x_int : int) {
     $self->{x_int} = $x_int;
   }
 
-  sub set_x_long : void ($self : TestCase, $x_long : long) {
+  sub set_x_long : void ($self, $x_long : long) {
     $self->{x_long} = $x_long;
   }
 
-  sub set_x_float : void ($self : TestCase, $x_float : float) {
+  sub set_x_float : void ($self, $x_float : float) {
     $self->{x_float} = $x_float;
   }
 
-  sub set_x_double : void ($self : TestCase, $x_double : double) {
+  sub set_x_double : void ($self, $x_double : double) {
     $self->{x_double} = $x_double;
   }
 
-  sub get_x_byte : byte ($self : TestCase) {
+  sub get_x_byte : byte ($self) {
     return $self->{x_byte};
   }
 
-  sub get_x_short : short ($self : TestCase) {
+  sub get_x_short : short ($self) {
     return $self->{x_short};
   }
 
-  sub get_x_int : int ($self : TestCase) {
+  sub get_x_int : int ($self) {
     return $self->{x_int};
   }
 
-  sub get_x_long : long ($self : TestCase) {
+  sub get_x_long : long ($self) {
     return $self->{x_long};
   }
 
-  sub get_x_float : float ($self : TestCase) {
+  sub get_x_float : float ($self) {
     return $self->{x_float};
   }
 
-  sub get_x_double : double ($self : TestCase) {
+  sub get_x_double : double ($self) {
     return $self->{x_double};
   }
   
@@ -469,11 +469,11 @@ package TestCase {
     $test_case->{private_field};
   }
 
-  sub get_minimal : TestCase::Minimal ($self : TestCase) {
+  sub get_minimal : TestCase::Minimal ($self) {
     return $self->{minimal};
   }
 
-  sub set_minimal : void ($self : TestCase, $value : TestCase::Minimal) {
+  sub set_minimal : void ($self, $value : TestCase::Minimal) {
     $self->{minimal} = $value;
   }
 
